js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-with-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
with
(
{
}
)
{
import
.
source
(
'
<
module
source
>
'
)
;
}
reportCompare
(
0
0
)
;
