js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-not-extensible-args.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
